bug fixed on individual page.Not showing error

--- a/style/admin-jobs.css
+++ b/style/admin-jobs.css
@@ -46,19 +46,20 @@
    padding: 8px 4px;
    transform: scale(0);
    transition: all 0.3s ease;
+   white-space: nowrap;
 }
 
 .admin__interaction__image,
 .user__interaction__image{
    /* padding:2px; */
-   height: 20px;
+   height: 18px;
    width: 20px;
 }
 
 .admin__interaction__actions a button:hover ,
 .user__interaction__actions a button:hover {
    background-color: hsla(209, 58%, 22%, 0.945);
-   transform: translateX(-84%);
+   transform: translateX(-82%);
 }
 
 .admin__interaction__actions a button:hover p,
